[gd_scene load_steps=15 format=4 uid="uid://daqlvni0vje2f"]

[ext_resource type="TileSet" uid="uid://iirxeuj11qtn" path="res://resources/tilesets/dungeon_room.tres" id="1_5xam1"]
[ext_resource type="Script" uid="uid://ck1lf2rq3opj4" path="res://scenes/dungeon_room/dungeon_room.gd" id="1_j14ek"]
[ext_resource type="PackedScene" uid="uid://begerpkge6ear" path="res://scenes/unit/unit.tscn" id="3_kwrl2"]
[ext_resource type="Script" uid="uid://bqy1uwvqjyq6j" path="res://components/play_area.gd" id="3_ohn1x"]
[ext_resource type="Script" uid="uid://bn7hlrg1pey0v" path="res://data/units/unit_stats.gd" id="4_4hobq"]
[ext_resource type="Resource" uid="uid://dy0r3xqgqrkya" path="res://resources/units/halberd.tres" id="4_iyyhj"]
[ext_resource type="Texture2D" uid="uid://uvnwcfs4n1ht" path="res://assets/isometric/environment/tilesheet/Ground.png" id="4_kns8m"]
[ext_resource type="Script" uid="uid://v7xcoy5i2xfe" path="res://components/unit_grid.gd" id="4_ohn1x"]
[ext_resource type="Script" uid="uid://cjat1spuabjp4" path="res://components/tile_highlighter.gd" id="5_h6ui1"]
[ext_resource type="Texture2D" uid="uid://brswm3vmlvs7v" path="res://assets/isometric/unit_models/orc_warrior/Idle_Armed/Body/225/Idle_Armed_Body_225_0001.png" id="5_so1o4"]
[ext_resource type="Script" uid="uid://b0br0dvfaj8xn" path="res://components/unit_mover.gd" id="11_le5r4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_le5r4"]
texture = ExtResource("4_kns8m")
texture_region_size = Vector2i(256, 512)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 182)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 182)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 182)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 182)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, 182)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, 182)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, 182)
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, 182)
8:0/0 = 0
8:0/0/texture_origin = Vector2i(0, 182)
9:0/0 = 0
9:0/0/texture_origin = Vector2i(0, 182)
10:0/0 = 0
10:0/0/texture_origin = Vector2i(0, 182)
11:0/0 = 0
11:0/0/texture_origin = Vector2i(0, 182)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, 182)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, 182)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, 182)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, 182)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, 182)
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, 182)
6:1/0 = 0
6:1/0/texture_origin = Vector2i(0, 182)
7:1/0 = 0
7:1/0/texture_origin = Vector2i(0, 182)
8:1/0 = 0
8:1/0/texture_origin = Vector2i(0, 182)
9:1/0 = 0
9:1/0/texture_origin = Vector2i(0, 182)
10:1/0 = 0
10:1/0/texture_origin = Vector2i(0, 182)
11:1/0 = 0
11:1/0/texture_origin = Vector2i(0, 182)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, 182)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, 182)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, 182)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, 182)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, 182)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, 182)
6:2/0 = 0
6:2/0/texture_origin = Vector2i(0, 182)
7:2/0 = 0
7:2/0/texture_origin = Vector2i(0, 182)
8:2/0 = 0
8:2/0/texture_origin = Vector2i(0, 182)
9:2/0 = 0
9:2/0/texture_origin = Vector2i(0, 182)
10:2/0 = 0
10:2/0/texture_origin = Vector2i(0, 182)
11:2/0 = 0
11:2/0/texture_origin = Vector2i(0, 182)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, 182)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, 182)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, 182)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, 182)
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, 182)
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, 182)
6:3/0 = 0
6:3/0/texture_origin = Vector2i(0, 182)
7:3/0 = 0
7:3/0/texture_origin = Vector2i(0, 182)
8:3/0 = 0
8:3/0/texture_origin = Vector2i(0, 182)
9:3/0 = 0
9:3/0/texture_origin = Vector2i(0, 182)
10:3/0 = 0
10:3/0/texture_origin = Vector2i(0, 182)
11:3/0 = 0
11:3/0/texture_origin = Vector2i(0, 182)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, 182)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, 182)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, 182)
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, 182)

[sub_resource type="TileSet" id="TileSet_ohn1x"]
tile_shape = 1
tile_size = Vector2i(256, 128)
sources/2 = SubResource("TileSetAtlasSource_le5r4")

[sub_resource type="Resource" id="Resource_4hobq"]
resource_local_to_scene = true
script = ExtResource("4_4hobq")
name = "Orc"
resource_cost = 5
unit_texture = ExtResource("5_so1o4")
metadata/_custom_type_script = "uid://bn7hlrg1pey0v"

[node name="DungeonRoom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_j14ek")

[node name="Visuals" type="Node2D" parent="."]
y_sort_enabled = true

[node name="OutdoorFloor" type="TileMapLayer" parent="Visuals"]
z_as_relative = false
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAGAA8APAAGAAEAAAAGAA4APAAKAAEAAAAGAA0APAAJAAAAAAAGAAwAPAABAAQAAAAGAAsAPAAJAAAAAAAGAAcAPAAEAAEAAAAGAAYAPAABAAQAAAAGAAUAPAAJAAAAAAAGAAQAPAABAAQAAAAGAAMAPAAJAAAAAAAGAAIAPAALAAMAAAAGAAEAPAAJAAAAAAAGAAAAPAADAAMAAAAFAA8APAAGAAEAAAAFAA4APAAKAAEAAAAFAA0APAACAAQAAAAFAAUAPAACAAQAAAAFAAQAPAADAAQAAAAFAAMAPAAAAAQAAAAFAAIAPAABAAEAAAAFAAEAPAAJAAEAAAAFAAAAPAADAAIAAAAEAA8APAAAAAIAAAAEAAMAPAADAAQAAAAEAAIAPAAAAAQAAAAEAAEAPAAJAAEAAAAEAAAAPAAFAAEAAAADAAEAPAAJAAEAAAADAAAAPAADAAIAAAACAA8APAAGAAEAAAACAA4APAAKAAEAAAACAAIAPAADAAQAAAACAAEAPAAJAAEAAAACAAAAPAAFAAEAAAABAA8APAAAAAIAAAABAA4APAAKAAEAAAABAA0APAACAAQAAAABAAwAPAACAAQAAAABAAQAPAALAAMAAAABAAMAPAALAAEAAAABAAIAPAAGAAIAAAABAAEAPAAJAAEAAAABAAAAPAAFAAEAAAAAAA8APAAAAAIAAAAAAA4APAAHAAEAAAAAAA0APAALAAEAAAAAAAwAPAACAAIAAAAAAAsAPAALAAEAAAAAAAoAPAACAAIAAAAAAAYAPAAHAAEAAAAAAAUAPAAKAAMAAAAAAAQAPAAGAAAAAAAAAAMAPAACAAAAAAAAAAIAPAAHAAAAAAAAAAEAPAAGAAMAAAAAAAAAPAAHAAEAAAA=")
tile_set = ExtResource("1_5xam1")

[node name="Walls" type="TileMapLayer" parent="Visuals"]
unique_name_in_owner = true
z_index = 1
y_sort_enabled = true
tile_map_data = PackedByteArray("AAACAAwAEAAFAAAAAAABAAsAEAAJAAAAAAABAAoAEAAFAAAAAAAAAAkAEAAFAAAAAAAAAAgAEAAAAAAAAAAAAAcAEAAEAAAAAAABAAYAEAAEAAAAAAABAAUAEAAEAAAAAAACAAQAEAAEAAAAAAACAAMAEAAEAAAAAAADAAIAEAACAAAAAAADAA4AEAAFAAAAAAADAA8AEAABAAAAAAAEAA4AEAAHAAAAAAAFAAwAEAAHAAAAAAAEAA0AEAAHAAAAAAAFAAsAEAAHAAAAAAAGAAkAEAADAAAAAAAGAAoAEAAHAAAAAAAGAAgAEAAGAAAAAAAFAAcAEAAGAAAAAAAFAAYAEAAGAAAAAAAEAAUAEAAGAAAAAAAEAAQAEAAGAAAAAAADAAMAEAAGAAAAAAACAA0AEAAFAAAAAAA=")
tile_set = ExtResource("1_5xam1")

[node name="GameArea" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter")]
y_sort_enabled = true
position = Vector2(768, 128)
tile_set = ExtResource("1_5xam1")
script = ExtResource("3_ohn1x")
unit_grid = NodePath("ArenaUnitGrid")
tile_highlighter = NodePath("TileHighlighter")

[node name="Highlight" type="TileMapLayer" parent="GameArea"]
modulate = Color(0, 1, 0, 0.3019608)
z_index = 2
tile_map_data = PackedByteArray("AAD9//7/AgAEAAAAAAA=")
tile_set = SubResource("TileSet_ohn1x")

[node name="Floor" type="TileMapLayer" parent="GameArea"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD+/wYAPAACAAQAAAD+/wUAPAACAAQAAAD//wQAPAACAAQAAAD//wMAPAADAAQAAAAAAAEAPAADAAQAAAABAAIAPAADAAQAAAABAAMAPAADAAQAAAACAAQAPAABAAQAAAACAAUAPAACAAQAAAADAAYAPAAAAAQAAAAAAAsAPAACAAQAAAABAAoAPAADAAQAAAABAAkAPAADAAQAAAACAAgAPAAAAAQAAAACAAcAPAAAAAQAAAACAAYAPAADAAQAAAABAAUAPAACAAQAAAABAAQAPAACAAQAAAAAAAMAPAACAAQAAAAAAAIAPAABAAQAAAAAAAQAPAABAAQAAAAAAAUAPAADAAQAAAABAAYAPAAAAAQAAAABAAcAPAACAAQAAAABAAgAPAAAAAQAAAAAAAkAPAACAAQAAAAAAAoAPAAAAAQAAAD//wgAPAAAAAQAAAD+/wcAPAABAAQAAAD//wkAPAACAAQAAAAAAAgAPAACAAQAAAAAAAcAPAADAAQAAAAAAAYAPAABAAQAAAD//wUAPAACAAQAAAD//wYAPAADAAQAAAD//wcAPAADAAQAAAAAAAAAPAADAAQAAAD//wEAPAABAAQAAAD//wIAPAABAAQAAAD+/wMAPAADAAQAAAD+/wQAPAAAAAQAAAD9/wUAPAADAAQAAAADAAcAPAABAAQAAAADAAgAPAABAAQAAAACAAkAPAACAAQAAAACAAoAPAACAAQAAAABAAsAPAACAAQAAAABAAwAPAAAAAQAAAAAAA0APAADAAQAAAAAAAwAPAACAAQAAAD//wsAPAACAAQAAAD//woAPAAAAAQAAAD+/wkAPAADAAQAAAD+/wgAPAACAAQAAAD9/wcAPAABAAQAAAD9/wYAPAABAAQAAAA=")
tile_set = ExtResource("1_5xam1")

[node name="ArenaUnitGrid" type="Node2D" parent="GameArea" node_paths=PackedStringArray("placeable_cells")]
y_sort_enabled = true
script = ExtResource("4_ohn1x")
placeable_cells = NodePath("../Floor")

[node name="TileHighlighter" type="Node" parent="GameArea" node_paths=PackedStringArray("play_area", "highlight_layer")]
script = ExtResource("5_h6ui1")
allowed_tile_color = Color(0, 1, 0, 1)
unallowed_tile_color = Color(1, 0, 0, 1)
enabled = false
play_area = NodePath("..")
highlight_layer = NodePath("../Highlight")
metadata/_custom_type_script = "uid://cjat1spuabjp4"

[node name="Orc" parent="." groups=["units"] instance=ExtResource("3_kwrl2")]
z_index = 1
y_sort_enabled = true
position = Vector2(768, 512)
stats = SubResource("Resource_4hobq")

[node name="Halberd" parent="." groups=["units"] instance=ExtResource("3_kwrl2")]
z_index = 1
y_sort_enabled = true
position = Vector2(1024, 640)
stats = ExtResource("4_iyyhj")

[node name="UnitMover" type="Node" parent="." node_paths=PackedStringArray("play_area")]
script = ExtResource("11_le5r4")
play_area = NodePath("../GameArea")
metadata/_custom_type_script = "uid://b0br0dvfaj8xn"
